custom api response and error handling

--- a/package.json
+++ b/package.json
@@ -9,5 +9,15 @@
     "dev": "nodemon src/index.js"
   },
   "author": "Ishit Godshalwar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.1"
+  }
 }
